# soundy-v2

./: Cargo.toml  Dockerfile  docker-compose.yml  lavalink-config.yml
src/: main.rs  util.rs
src/commands/: disconnect.rs  join.rs  mod.rs  now_playing.rs  play.rs  skip.rs  volume.rs
