[package]
name = "soundy-v2"
version = "0.1.0"
authors = ["Ole D <hi@cloudybyte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
chrono = "0.4"

[dependencies.lavalink-rs]
version = "0.9.0-rc.3"
#default-features = false
features = ["rustls", "serenity"]
#features = ["serenity"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serenity]
version = "0.10"
features = ["client", "cache", "standard_framework", "voice"]

[dependencies.songbird]
version = "0.2"
default-features = false
features = ["serenity-rustls", "gateway"]
